--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
@@ -6,7 +6,7 @@
 }
 
 /* Navbar */
-.navbar {
+.navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,23 +20,28 @@
     z-index: 1000;
 }
 
-.logo {
+.logo{
     font-size: 24px;
     font-weight: bold;
 }
 
-nav ul {
+.logo a{
+    text-decoration: none;
+    color:#c42d2d;
+}
+
+nav ul{
     list-style: none;
     display: flex;
     gap: 20px;
 }
 
-nav ul li {
+nav ul li{
     display: inline;
     padding-right: 20px;
 }
 
-nav ul li a {
+nav ul li a{
     text-decoration: none;
     color: black;
 }
@@ -55,19 +60,18 @@ nav ul a:hover{
 }
 
 /* Body */
-body {
+body{
     background-color: rgb(245, 245, 245);
 }
 
 /* Footer */
-footer {
+footer{
     background-color: #333;
     padding-bottom:5px;
     padding-top: 25px;
     color: white;
     width: 100%;
     text-align: left;
-
 }
 
 .footer-container{
@@ -77,7 +81,7 @@ footer {
 
 
 .footer-container div{
-    width:300px;
+    width:20%;
     margin-top: 10px;
 }
 
@@ -106,4 +110,10 @@ footer p{
 
 footer li{
     padding: 5px;
+}
+
+@media (max-width: 768px) {
+    .navbar nav ul {
+        flex-direction: column;
+    }
 }
