--- a/css/st_content.css
+++ b/css/st_content.css
@@ -37,6 +37,7 @@ h1 {
     line-height: 1.6;
     color: rgb(85, 85, 85);
     margin-bottom: 15px;
+    text-align: left;
 }
 
 /* List Styling */
@@ -50,6 +51,7 @@ h1 {
 .content ul li {
     font-size: 18px;
     margin-bottom: 5px;
+    text-align: left;
 }
 
 /* Image Container */
